@@ -14,6 +14,8 @@ V 2.2.0 (not yet released... planning summer 2023):
   - coding leads on this: Robert Blackwell and Joakim Anden
 * cmake build structure (thanks: Wenda Zhou, Marco Barbone, Libin Lu)
   - Note: the plan is to make the makefiles/make.inc.* obsolete by 2023 end.
+* interp (for type 2) accel by up to 60% in high-acc 2D/3D, by FMA/SIMD-friendly
+  rearranging of loops, by Martin Reinecke, PR #292.
 * Fix memleak in repeated setpts (Issue #269); thanks Aaron Shih & Libin Lu.
 * Fortran90 example via a new FINUFFT fortran module, thanks Reinhard Neder.
 * Better Python interface type checking (PR #237).
